z-index fix for popup

--- a/app/assets/stylesheets/root.css
+++ b/app/assets/stylesheets/root.css
@@ -55,6 +55,7 @@
 
 .settings__tooltip-visible{
 	display: block;
+	z-index: 2;
 }
 
 
